--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "iron-man-selector",
   "version": "0.1.0",
+  "homepage": "https://hdussert.github.io/le-protocole",
   "private": true,
   "dependencies": {
     "@stitches/react": "^1.2.8",
@@ -20,6 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -49,6 +52,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.7.1"
   }
 }
